# MYTHOS.cpp

./: .gitignore  ADAPTERS.md  AUDIT_FRAUD.json  AUDIT_REPORT.md  BLUEPRINT.md  CMakeLists.txt  DIFFUSION.txt  Dockerfile  FEATURE_MATRIX.md  GROK.md  LOC_REPORT.md  MOE_TEST_LOG.md  MULTIMODAL_TEST_LOG.md  OIL_TEST_LOG.md  OLD_TASKS_PARSED.json  PROTECTED_VERIFICATION_LOG.md  README.md  README_CLAIMS.json  README_PROOF.md  RELEASE_NOTES.md  REPORT.md  SAFETY_REPORT.md  SPEC.md  TASKS.md  TASKS_FIX_LOG.md  VERIFY_5X_LOG.md  _test_protect_oil.oil  build_linux.sh  oil_config.h.in
.bitnet/gpu/: convert_checkpoint.py  generate.py  model.py  pack_weight.py  requirements.txt  sample_utils.py  stats.py  tokenizer.py
.bitnet/src/: ggml-bitnet-mad.cpp
.github/skills/goal-persist/: SKILL.md
.github/workflows/: build.yml
.research/: 01-bitnet-b1.58-analysis.md  02-bitnetcpp-lossless-analysis.md  04-vqvae-residual-coding.md  05-rate-distortion-bounds.md  06-ste-training-in-format.md  07-dynamic-routing-gamps.md  08-final-verdict.md  09-oil8-256-centroids.md  README.md  actionable_improvements.md  asi_papers.md  distributed_research.md  oil_idx_research.md
INFERENCE-ENGINE/: inference.cpp  inference.h  stream.cpp
OIL8/: codec.cpp  codec.h  quantize.cpp  quantize.h
TRAINER-ENGINE/DENSE/: checkpoint.cpp  dataloader.cpp  trainer.h
TRAINER-ENGINE/MULTIMODEL/AUDIO/: audio.cpp
TRAINER-ENGINE/MULTIMODEL/EMBEDDINGS/: embeddings.h
TRAINER-ENGINE/MULTIMODEL/OCR/: ocr.h
TRAINER-ENGINE/MULTIMODEL/TEXT/: multimodal_text.h
TRAINER-ENGINE/MULTIMODEL/VIDEO/: video.h
TRAINER-ENGINE/MoE/: moe.cpp  moe.h
bench/: bench_all.cpp  bench_inference.cpp  bench_kernels.cpp  bench_oil_quant.cpp  bench_quality.cpp
cmake/: arch.cmake  compiler.cmake
data/: tinyshakespeare.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  README.md  RESEARCH.md  USAGE.md
docs/INTERNAL/: README.md
docs/MODULES/: README.md  tensor.md
engines/OIL8/: codec.cpp  codec.h  quantize.cpp  quantize.h
engines/inference/: inference.cpp  stream.cpp
engines/trainer/dense/: checkpoint.cpp  dataloader.cpp  trainer.cpp
engines/trainer/moe/: moe.cpp  moe.h
engines/trainer/moe/audio/: audio.cpp
engines/trainer/moe/image/: vision.h
engines/trainer/moe/ocr/: ocr.cpp
engines/trainer/moe/text/: multimodal_text.cpp
engines/trainer/moe/video/: video.cpp
engines/trainer/moe/vision/: vision.cpp  vision.h
engines/trainer/multimodel/audio/: audio.h
engines/trainer/multimodel/embeddings/: embeddings.cpp
engines/trainer/multimodel/image/: vision.cpp
engines/trainer/multimodel/text/: multimodal_text.cpp
engines/trainer/multimodel/vision/: vision.h
graphify-out/: .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
include/oil/: adapters.h  asi.h  autograd.h  backend.h  codebook.h  distributed.h  eval.h  finetune.h  flash_attention.h  format_planner.h  generator.h  gpu_compute.h  gpu_extras.h  inference_opt.h  int8_quant.h  kernel.h  kv_cache.h  log_writer.h  math.h  memory.h  model.h  moe_enhance.h  moe_variants.h  multimodal.h  oil_engines.h  oil_format.h  optimizer.h  production.h  random.h  sampler.h  scheduler.h  ste_quantizer.h  tensor.h  tokenizer.h  trainer.h  transformer.h  types.h
src/: asi.cpp  autograd.cpp  backend.cpp  bpe_tokenizer.cpp  codebook.cpp  distributed.cpp  eval.cpp  finetune.cpp  flash_attention.cpp  format_planner.cpp  generator.cpp  gpu_compute.cpp  gpu_extras.cpp  inference_opt.cpp  int8_quant.cpp  kernel_i2s.cpp  kernel_oil4.cpp  kernel_oil8.cpp  kernel_tl.cpp  kv_cache.cpp  log_writer.cpp  math.cpp  math_avx2.cpp  memory.cpp  model.cpp  moe_enhance.cpp  moe_variants.cpp  multimodal.cpp  oil_engines.cpp  oil_format.cpp  optimizer.cpp  production.cpp  random.cpp  sampler.cpp  scheduler.cpp  ste_quantizer.cpp  tensor.cpp  trainer.cpp  transformer.cpp
src/adapters/: dora.cpp  gguf_import.cpp  lora.cpp  qlora.cpp  safetensors.cpp
src/kernels/: cuda_kernels.cu
tests/: _debug_embed.cpp  paged_kv_1t_test.cpp  test_all.cpp  test_asi.cpp  test_asi_flywheel.cpp  test_bench.cpp  test_debug.cpp  test_format.cpp  test_gpu.cpp  test_gradient_check.cpp  test_inference_opt.cpp  test_kernel.cpp  test_math.cpp  test_model.cpp  test_multimodal.cpp  test_production.cpp  test_protected.cpp  test_sha256_corrupt.cpp  test_tensor.cpp  test_tokenizer.cpp  test_trainer.cpp  test_training.cpp
tools/: bench.cpp  convert.cpp  finetune.cpp  infer.cpp  info.cpp  run_all_tests.ps1  run_tests.ps1  sign.ps1  train.cpp
tools/wdac/: allow_build.xml  mythos_wdac_policy.xml  mythos_wdac_policy_enforce.xml
wiki/: Api-Reference.md  Architecture.md  Build-Guide.md  Contributing.md  Home.md  Inference.md  Modules.md  OIL-Format.md  Research.md  Training.md  Usage-Guide.md  _Sidebar.md
wiki/files/: _index.md  asi.cpp.md  asi.h.md  asi_pipeline.cpp.md  asi_pipeline.h.md  autograd.cpp.md  autograd.h.md  backend.cpp.md  backend.h.md  bpe_tokenizer.cpp.md  codebook.cpp.md  codebook.h.md  distributed.cpp.md  engine-codec.cpp.md  engine-dense-checkpoint.cpp.md  engine-dense-dataloader.cpp.md  engine-dense-trainer.cpp.md  engine-inference-stream.cpp.md  engine-inference.cpp.md  engine-moe-embeddings.cpp.md  engine-moe-multimodal-text.cpp.md  engine-moe-ocr.cpp.md  engine-moe-video.cpp.md  engine-moe.cpp.md  engine-multimodal-audio.cpp.md  engine-multimodal-vision.cpp.md  engine-oil8-codec.cpp.md  engine-oil8-quantize.cpp.md  finetune.cpp.md  flash_attention.cpp.md  flash_attention.h.md  format_planner.cpp.md  generator.cpp.md  generator.h.md  gpu_compute.cpp.md  gpu_compute.h.md  gpu_extras.cpp.md  gpu_extras.h.md  inference_opt.cpp.md  inference_opt.h.md  (+51 more)
